--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -8,6 +8,7 @@
     background: rgba(230, 0, 126, 0.7);
     justify-content: center;
     align-items: center;
+    z-index: 1000;
 }
 
 .modal-content {
@@ -19,17 +20,11 @@
     position: absolute;
     top: 20px;
     right: 30px;
-    font-size: 30px;
+    font-size: 60px;
     color: white;
     cursor: pointer;
 }
 
 .modal-trigger {
     cursor: pointer;
-}
-
-@media (max-width: 768px) {
-    .close {
-        top: 128px;
-    }
 }
